# os-june

./: .env.example  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  LOOP_PROGRESS.md  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  admin-preview.html  agent-hud.html  agent-image-preview.html  biome.json  conductor.json  connectors-preview.html  home-preview.html  hud.html  index.html  mascot.html  meeting-hud.html  model-picker-preview.html  onboarding-preview.html  os-platform.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  profile-switcher-preview.html  sessions-rename-preview.html  skills-lock.json  sound-test.html  styleguide.html  vite.config.ts  vitest.workspace.ts
.conductor/: settings.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.specify/: feature.json
agent-runtime/: package.json  tsconfig.json
crates/june-companion-crypto/: Cargo.toml
crates/june-companion-crypto/include/: june_companion_crypto.h
crates/june-companion-crypto/src/: lib.rs
crates/june-companion-protocol/: Cargo.toml
crates/june-companion-protocol/src/: lib.rs
docs/: agent-note-vibes-recommendation.md  ai-self-identification.md  audio-pipeline.md  auto-model-rollout.md  browser-computer-use-prd.md  browser-use-scope.md  companion-apns-setup.md  companion-app-store-readiness.md  companion-architecture.md  companion-development.md  companion-privacy.md  companion-protocol.md  companion-relay-runbook.md  companion-revocation.md  companion-security-review.md  companion-threat-model.md  computer-use-cua-driver-spike.md  computer-use-support.md  configuration.md  copy-guidelines.md  desktop-release-runner.md  development.md  dictation-helper-protocol.md  focus.md  github-security-readiness.md  hermes-architecture.md  hermes-gateway-gotchas.md  hermes-tui-debug.md  hermes-upgrade-checklist.md  hermes-upstream-template.md  hermes-upstream-v2026.6.19.md  hermes-upstream-v2026.7.20.md  home-assistant.md  index.md  june-api-prd.md  local-agent-models.md  local-ci-signoff.md  onboarding-design.md  os-accounts-backend.md  os-accounts-login.md  (+24 more)
extension/: README.md  package.json  popup.html  tsconfig.json  vite.config.ts
june-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  clippy.toml  config.toml
legacy/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
monitor/: .env.example  Dockerfile  Dockerfile.worker  README.md  checks.json  package-lock.json  package.json  tsconfig.json
playground/: waveform-playground.html
preview/: agent-boot.js  agent.html  agent.jsx  record.mjs  smoke.mjs
scribe-api/: .env.example  Cargo.toml  Dockerfile  config.toml
scribe-api/crates/api/: Cargo.toml
scribe-api/crates/api/src/: envelope.rs  error.rs  lib.rs  remote.rs  state.rs  validation.rs
scribe-api/crates/api/src/handlers/: agent.rs  dictate.rs  health.rs  issues.rs  mod.rs  models.rs  notes.rs  remote.rs  remote_mobile.html  shares.rs  surveys.rs  tool_guard.rs  verify.rs  web.rs
scribe-api/crates/api/tests/: http_boundary.rs
scribe-api/crates/persistence/: Cargo.toml
scribe-api/crates/persistence/migrations/: 0001_shared_notes.sql
scribe-api/crates/persistence/src/: lib.rs
scribe-api/crates/services/: Cargo.toml
scribe-api/crates/services/src/: agent_chat.rs  charge_flow.rs  dictate.rs  error.rs  lib.rs  note_generate.rs  note_share.rs  note_transcribe.rs  pricing.rs  web_augment.rs
scribe-api/crates/services/src/prompts/: dictate_cleanup.md  note_generate.md
scripts/: admin-preview-screenshots.mjs  admin-preview-walkthrough.mjs  benchmark-agent-runtime.mjs  build-agent-runtime.mjs  build-signed-dmg.sh  bump-version.mjs  bundle-hermes-runtime-linux.sh  bundle-hermes-runtime-windows.ps1  bundle-hermes-runtime.sh  bundle-nm-shim.sh  bundle-persona-models.ps1  bundle-persona-models.sh  cargo-os-june-runner.sh  cargo-os-scribe-runner.sh  check-cargo-release-age.py  chrome-web-store.mjs  computer-use-dev.mjs  computer-use-self-test.mjs  e2e-osguard.sh  e2e_osguard_matrix.py  ephemeral-june-api.sh  extension-release.mjs  generate-icons.mjs  (+21 more)
src-tauri/native/windows-dictation-helper/: Cargo.toml
src-tauri/native/windows-dictation-helper/src/: audio.rs  clipboard.rs  focus.rs  hotkeys.rs  main.rs  permissions.rs  protocol.rs  shortcut_capture.rs
src-tauri/spikes/persona-recognition/: Cargo.toml  NOTES.md  README.md  build.rs  smoke-labels.json
src-tauri/spikes/persona-recognition/src/: main.rs
(+1644 files in other folders)
