[package]
name = "june-companion-crypto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Noise-based end-to-end encryption for the June companion"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
snow = { version = "0.10", default-features = false, features = ["default-resolver-crypto", "std"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
