[package]
name = "june-companion-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Versioned wire contract for the June companion"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
