[package]
name = "scribe-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
scribe-config.workspace = true
scribe-domain.workspace = true
scribe-services.workspace = true
futures-util.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures-util.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
reqwest.workspace = true
tower = { workspace = true, features = ["util"] }
