[package]
name = "scribe-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
bytes.workspace = true
futures-util.workspace = true
scribe-config.workspace = true
scribe-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
pretty_assertions.workspace = true
