[package]
name = "june-windows-dictation-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[[bin]]
name = "june-dictation-helper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
