[package]
name = "persona-recognition-spike"
version = "0.0.0"
edition = "2021"
rust-version = "1.80.0"
publish = false

[dependencies]
anyhow = "1.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "=0.10.9"
sherpa-onnx = { version = "=1.13.4", default-features = false, features = ["static"] }

[build-dependencies]
sha2 = "=0.10.9"
